# boat

./: .gitattributes  .gitignore  Cargo.toml  README.md  config.json  export_gltf.py  index.html
assets/: bboxes.glb  boats-bbox.glb  boats.glb  cameras.glb  config.json  islands-bbox.glb  islands.glb  lights.glb  ocean.glb  persons.glb  seilespill.blend  seilespill.glb  seilespill.gltf
src/: custom_assets.rs  dock.rs  dock_menu.rs  main.rs  utils.rs
