[package]
name = "seilespill"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.11.0"
bevy_egui = "0.21.0"
# serde_json = "1.0.104"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies] 
bevy_rapier3d = { version = "0.22.0", features = ["debug-render-3d", "parallel"] }

[target.'cfg(target_arch = "wasm32")'.dependencies] 
bevy_rapier3d = { version = "0.22.0", features = ["debug-render-3d", "wasm-bindgen"] }
