[package]
name = "seilespill"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.12.0", features = ["serialize"]}
bevy_egui = "0.23.0"
ron = "0.8.1"
serde = "1.0.192"
serde_json = "1.0.108"
thiserror = "1.0.50"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies] 
bevy_rapier3d = { version = "0.23.0", features = ["debug-render-3d", "parallel"] }

[target.'cfg(target_arch = "wasm32")'.dependencies] 
bevy_rapier3d = { version = "0.23.0", features = ["debug-render-3d", "wasm-bindgen"] }
